feat: new heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</header>
 	<main>
 		<header>
-			<h1 class="mainHeader">Radosław Kierznowski - Strona domowa</h1>
+			<h1 class="mainHeader">Radosław Kierznowski - Strona domowa - pozdro GitHub</h1>
 		</header>
 		<section>
 			<h2 class="sectionHeader">Kim jestem?</h2>
