feat: upiekszanie strony

--- a/06-20.html
+++ b/06-20.html
@@ -11,11 +11,11 @@
 
 <body>
 	<header>
-		<a href="index.html">Strona główna</a>
-		<a href="podstrona.html">Podstrona</a>
+		<a class="link" href="index.html">Strona główna</a>
+		<a class="link" href="podstrona.html">Podstrona</a>
 	</header>
 	<main>
-		<article>
+		<a class="link"rticle>
 			<header>
 				<h1 class="postHeader">Jednak nie do końca</h1>
 			</header>
