--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 	<header>
-		<a href="index.html">Strona główna</a>
-		<a href="podstrona.html">Podstrona</a>
+		<a class="link" class="link" href="index.html">Strona główna</a>
+		<a class="link" class="link" href="podstrona.html">Podstrona</a>
 	</header>
 	<main>
 		<header>
@@ -25,44 +25,44 @@
 				Bywam
 				też często na różnych konferencjach IT. Od 2013 roku jeżdżę regularnie na ITechDay. Od
 				czasu do czasu dodaję wpisy na blogu Kierznowski.pro <br>
-				<a href="#pamietniczek">Przejdź do pamiętniczka.</a>
+				<a class="link" class="link" href="#pamietniczek">Przejdź do pamiętniczka.</a>
 			</p>
 		</section>
 		<section id="pamietniczek">
 			<h2 class="diaryHeader">Pamiętniczek</h2>
 			<section>
-				<h3>Pierwsze podejście do pracy domowej.</h3>
+				<h3 class="thirdHeader">Pierwsze podejście do pracy domowej.</h3>
 				<p>
 					Wczoraj (niedziela) chciałem zrobić pracę domową z tygodnia II. Niestety ja i inni uczestnicy kursu
 					nie mogliśmy tego zrobić, bo na kilka godzin padł Vimeo. <br>
-					<a href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy domowej.</a>
+					<a class="link" class="link" href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy domowej.</a>
 				</p>
 			</section>
 			<section>
-				<h3>Drugie podejście do pracy domowej.</h3>
+				<h3 class="thirdHeader">Drugie podejście do pracy domowej.</h3>
 				<p>
 					Udało się zrobić pracę domową. Vimeo nie nawalił, a to co widzisz to efekt szkolenia.
 				</p>
 			</section>
 			<section>
-				<h3>Tydzień III zaliczony</h3>
+				<h3 class="thirdHeader">Tydzień III zaliczony</h3>
 				<p>
 					W ciągu ostatniego tygodnia nie było zbyt dużo czasu na wzięcie się za III tydzień WTF... <br>
-					<a href="06-17.html">Przejdź do artykułu o III tygodniu pracy domowej.</a>
+					<a class="link" class="link" href="06-17.html">Przejdź do artykułu o III tygodniu pracy domowej.</a>
 				</p>
 			</section>
 			<section>
-				<h3>Jednak nie do końca</h3>
+				<h3 class="thirdHeader">Jednak nie do końca</h3>
 				<p>
 					Czwartek wolny, czas dokończyć III tydzień i nadrobić resztę. <br>
-					<a href="06-20.html">Przejdź do wpisu z 20 czerwca 2019.</a>
+					<a class="link" class="link" href="06-20.html">Przejdź do wpisu z 20 czerwca 2019.</a>
 				</p>
 			</section>
 			<section>
-				<h3>Samoczynny restart komputera</h3>
+				<h3 class="thirdHeader">Samoczynny restart komputera</h3>
 <p>
 	Wystarczyło na chwilę odejść... <br>
-	<a href="06-22.html">Przeczytaj wpis o restarcie komputera.</a>
+	<a class="link" class="link" href="06-22.html">Przeczytaj wpis o restarcie komputera.</a>
 </p>
 			</section>
 		</section>
