--- a/06-17.html
+++ b/06-17.html
@@ -14,12 +14,12 @@
 		<a class="link" href="index.html">Strona główna</a>
 		<a class="link" href="podstrona.html">Podstrona</a>
 	</header>
-	<main>
+	<main class="main">
 		<a class="link"rticle>
 			<header>
 				<h1 class="postHeader">Tydzień III zaliczony</h1>
 			</header>
-			<p>
+			<p class="paragraph">
 				Jak wspominałem w zajawce, ciężko było znaleźć czas na zrobienie kursu, ale się udało. Mam nadzieję, że szybko uda się nadrobić IV tydzień. Chyba muszę sobie wpisać w kalendarzu kurs <em>WTF: Co ten frontend</em>.
 			</p>
 			<footer><img src="radek.jpg" alt="Zdjęcie autora Radosław Kierznowski">Autorem artykułu jest Radosław Kierznowski.</footer>
