--- a/06-20.html
+++ b/06-20.html
@@ -14,12 +14,12 @@
 		<a class="link" href="index.html">Strona główna</a>
 		<a class="link" href="podstrona.html">Podstrona</a>
 	</header>
-	<main>
+	<main class="main">
 		<a class="link"rticle>
 			<header>
 				<h1 class="postHeader">Jednak nie do końca</h1>
 			</header>
-			<p>
+			<p class="paragraph">
 				Wielki Czwartek i można brać się za dokończenie kursu. Niestety nie dostaliśmy wolnego w piątek to trzeba będzie nadrobić w sobotę.
 			</p>
 			<footer><img src="radek.jpg" alt="Zdjęcie autora Lorem Ipsum">Autorem artykułu jest Lorem Ipsum.</footer>
