--- a/06-22.html
+++ b/06-22.html
@@ -14,12 +14,12 @@
 		<a class="link" href="index.html">Strona główna</a>
 		<a class="link" href="podstrona.html">Podstrona</a>
 	</header>
-	<main>
+	<main class="main">
 		<a class="link"rticle>
 			<header>
 				<h1 class="postHeader">Samoczynny restart komputera...</h1>
 			</header>
-			<p>
+			<p class="paragraph">
 				Sytuacja miała miejsce podczas poprzedniego wpisu, dlatego kończyłem go dzisiaj. Wystarczyło odejść na chwilę, a Windows 10 stwierdził, że może spokojnie się zrestartować i instalować aktualizację. Jak dobrze, że w Visual Studio Code miałem włączony Auto Save.
 				</p>
 			<footer><img src="radek.jpg" alt="Zdjęcie autora Radosław Kierznowski">Autorem artykułu jest Radosław Kierznowski.</footer>
