--- a/06-23.html
+++ b/06-23.html
@@ -14,48 +14,48 @@
 		<a class="link" href="index.html">Strona główna</a>
 		<a class="link" href="podstrona.html">Podstrona</a>
 	</header>
-	<main>
+	<main class="main">
 		<a class="link"rticle>
 			<header>
 				<h1 class="postHeader">Pierwsze podejście do pracy domowej.</h1>
 			</header>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
-			<p>
+			<p class="paragraph">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odio a magni iure, saepe atque beatae nobis ullam
 				omnis sequi reprehenderit neque velit placeat dolor libero est vel natus laboriosam!
 			</p>
