feat: Po zabawie pudełkami i zmiania layoutu. Może być trochę brudno.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <body>
-	<header>
+	<header class="navigation">
 		<a class="link" class="link" href="index.html">Strona główna</a>
 		<a class="link" class="link" href="podstrona.html">Podstrona</a>
 	</header>
-	<main class="main">
+	<main id="#top" class="main">
 		<header>
 			<h1 class="mainHeader">Radosław Kierznowski - Strona domowa - pozdro GitHub</h1>
 		</header>
 		<section class="about">
 			<h2 class="sectionHeader">Kim jestem?</h2>
 			<p class="paragraph">
-				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User Group).
+				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User
+				Group).
 				Bywam
 				też często na różnych konferencjach IT. Od 2013 roku jeżdżę regularnie na ITechDay. Od
 				czasu do czasu dodaję wpisy na blogu Kierznowski.pro <br>
@@ -35,7 +36,8 @@
 				<p class="paragraph">
 					Wczoraj (niedziela) chciałem zrobić pracę domową z tygodnia II. Niestety ja i inni uczestnicy kursu
 					nie mogliśmy tego zrobić, bo na kilka godzin padł Vimeo. <br>
-					<a class="link" class="link" href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy domowej.</a>
+					<a class="link" class="link" href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy
+						domowej.</a>
 				</p>
 			</section>
 			<section>
@@ -60,18 +62,19 @@
 			</section>
 			<section>
 				<h3 class="thirdHeader">Samoczynny restart komputera</h3>
-<p class="paragraph">
-	Wystarczyło na chwilę odejść... <br>
-	<a class="link" class="link" href="06-22.html">Przeczytaj wpis o restarcie komputera.</a>
-</p>
+				<p class="paragraph">
+					Wystarczyło na chwilę odejść... <br>
+					<a class="link" class="link" href="06-22.html">Przeczytaj wpis o restarcie komputera.</a>
+				</p>
 			</section>
 		</section>
 
 	</main>
 	<footer>
+		<a href="#top" class="top">Na górę</a>
 		Strona domowa Radosława Kierznowskiego, wszystkie treści są efektem szkolenia WTF: Co ten frontend.
 	</footer>
-<script src="main.js"></script>
+	<script src="main.js"></script>
 </body>
 
 </html>
