--- a/index.html
+++ b/index.html
@@ -11,60 +11,60 @@
 
 <body>
 	<header class="navigation">
-		<a class="link" class="link" href="index.html">Strona główna</a>
-		<a class="link" class="link" href="podstrona.html">Podstrona</a>
+		<a class="navigation__link" href="index.html">Strona główna</a>
+		<a class="navigation__link" href="podstrona.html">Podstrona</a>
 	</header>
 	<main id="#top" class="main">
-		<header>
-			<h1 class="mainHeader">Radosław Kierznowski - Strona domowa - pozdro GitHub</h1>
+		<header class="header">
+			<h1 class="heading">Radosław Kierznowski - Strona domowa - pozdro GitHub</h1>
 		</header>
 		<section class="about">
-			<h2 class="sectionHeader">Kim jestem?</h2>
-			<p class="paragraph">
+			<h2 class="about__header">Kim jestem?</h2>
+			<p class="about__paragraph">
 				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User
 				Group).
 				Bywam
 				też często na różnych konferencjach IT. Od 2013 roku jeżdżę regularnie na ITechDay. Od
 				czasu do czasu dodaję wpisy na blogu Kierznowski.pro <br>
-				<a class="link" class="link" href="#pamietniczek">Przejdź do pamiętniczka.</a>
+				<a class="about_link" href="#pamietniczek">Przejdź do pamiętniczka.</a>
 			</p>
 		</section>
-		<section id="pamietniczek">
-			<h2 class="diaryHeader">Pamiętniczek</h2>
+		<section id="diary">
+			<h2 class="diary__header">Pamiętniczek</h2>
 			<section>
-				<h3 class="thirdHeader">Pierwsze podejście do pracy domowej.</h3>
-				<p class="paragraph">
+				<h3 class="diary__post-title">Pierwsze podejście do pracy domowej.</h3>
+				<p class="diary__paragraph">
 					Wczoraj (niedziela) chciałem zrobić pracę domową z tygodnia II. Niestety ja i inni uczestnicy kursu
 					nie mogliśmy tego zrobić, bo na kilka godzin padł Vimeo. <br>
-					<a class="link" class="link" href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy
+					<a class="diary_link" href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy
 						domowej.</a>
 				</p>
 			</section>
 			<section>
-				<h3 class="thirdHeader">Drugie podejście do pracy domowej.</h3>
-				<p class="paragraph">
+				<h3 class="diary__post-title">Drugie podejście do pracy domowej.</h3>
+				<p class="diary__paragraph">
 					Udało się zrobić pracę domową. Vimeo nie nawalił, a to co widzisz to efekt szkolenia.
 				</p>
 			</section>
 			<section>
-				<h3 class="thirdHeader">Tydzień III zaliczony</h3>
-				<p class="paragraph">
+				<h3 class="diary__post-title">Tydzień III zaliczony</h3>
+				<p class="diary__paragraph">
 					W ciągu ostatniego tygodnia nie było zbyt dużo czasu na wzięcie się za III tydzień WTF... <br>
-					<a class="link" class="link" href="06-17.html">Przejdź do artykułu o III tygodniu pracy domowej.</a>
+					<a class="diary__link" href="06-17.html">Przejdź do artykułu o III tygodniu pracy domowej.</a>
 				</p>
 			</section>
 			<section>
-				<h3 class="thirdHeader">Jednak nie do końca</h3>
-				<p class="paragraph">
+				<h3 class="diary__post-title">Jednak nie do końca</h3>
+				<p class="diary__paragraph">
 					Czwartek wolny, czas dokończyć III tydzień i nadrobić resztę. <br>
-					<a class="link" class="link" href="06-20.html">Przejdź do wpisu z 20 czerwca 2019.</a>
+					<a class="diary__link" href="06-20.html">Przejdź do wpisu z 20 czerwca 2019.</a>
 				</p>
 			</section>
 			<section>
-				<h3 class="thirdHeader">Samoczynny restart komputera</h3>
-				<p class="paragraph">
+				<h3 class="diary__post-title">Samoczynny restart komputera</h3>
+				<p class="diary__paragraph">
 					Wystarczyło na chwilę odejść... <br>
-					<a class="link" class="link" href="06-22.html">Przeczytaj wpis o restarcie komputera.</a>
+					<a class="diary__link" href="06-22.html">Przeczytaj wpis o restarcie komputera.</a>
 				</p>
 			</section>
 		</section>
