--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</header>
 		<section class="about">
 			<h2 class="about__header">Kim jestem?</h2>
-			<p class="about__paragraph">
+			<p class="about__paragraph about__paragraph--js">
 				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User
 				Group).
 				Bywam
