Napisanie tekstu JS-em

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<header class="header">
 			<h1 class="heading">Radosław Kierznowski - Strona domowa - pozdro GitHub</h1>
 		</header>
+		<div class="main__div--js"></div>
 		<section class="about">
 			<h2 class="about__header">Kim jestem?</h2>
 			<p class="about__paragraph about__paragraph--js">
