Tworzenie listy ul i ol

--- a/index.html
+++ b/index.html
@@ -27,8 +27,24 @@
 				Bywam
 				też często na różnych konferencjach IT. Od 2013 roku jeżdżę regularnie na ITechDay. Od
 				czasu do czasu dodaję wpisy na blogu Kierznowski.pro <br>
-				<a class="about_link" href="#pamietniczek">Przejdź do pamiętniczka.</a>
+				<a class="about__link" href="#pamietniczek">Przejdź do pamiętniczka.</a>
 			</p>
+			<section class="hobby">
+				<h3 class="hobby__header">Hobby</h3>
+				<ul class="hobby__list">
+					<li class="hobby__element">DIY</li>
+					<li class="hobby__element">Programowanie</li>
+					<li class="hobby__element">Spotkania IT</li>
+				</ul>
+			</section>
+			<section class="plan">
+				<h3 class="plan__header">Plan</h3>
+				<ol class="plan__list">
+					<li class="plan__element">Otwórz przeglądarkę</li>
+					<li class="plan__element">Wpisz cotenfrontend.pl</li>
+					<li class="plan__element">[enter]</li>
+				</ol>
+			</section>
 		</section>
 		<section id="diary">
 			<h2 class="diary__header">Pamiętniczek</h2>
