--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 
 <body>
-	<header class="navigation">
-		<a class="navigation__link" href="index.html">Strona główna</a>
-		<a class="navigation__link" href="podstrona.html">Podstrona</a>
+	<header class="site-header">
+		<nav class="navigation">
+			<ul class="navigation__list">
+				<li class="navigation__item"> <a class="navigation__link" href="index.html">Strona główna</a>
+				</li>
+				<li class="navigation__item"> <a class="navigation__link" href="podstrona.html">Podstrona</a>
+				</li>
+			</ul>
+		</nav>
 	</header>
 	<main id="#top" class="main">
 		<header class="header">
@@ -22,9 +28,7 @@
 		<section class="about">
 			<h2 class="about__header">Kim jestem?</h2>
 			<p class="about__paragraph about__paragraph--js">
-				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User
-				Group).
-				Bywam
+				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User	Group).	Bywam
 				też często na różnych konferencjach IT. Od 2013 roku jeżdżę regularnie na ITechDay. Od
 				czasu do czasu dodaję wpisy na blogu Kierznowski.pro <br>
 				<a class="about__link" href="#pamietniczek">Przejdź do pamiętniczka.</a>
@@ -32,17 +36,17 @@
 			<section class="hobby">
 				<h3 class="hobby__header">Hobby</h3>
 				<ul class="hobby__list">
-					<li class="hobby__element">DIY</li>
-					<li class="hobby__element">Programowanie</li>
-					<li class="hobby__element">Spotkania IT</li>
+					<li class="hobby__item">DIY</li>
+					<li class="hobby__item">Programowanie</li>
+					<li class="hobby__item">Spotkania IT</li>
 				</ul>
 			</section>
 			<section class="plan">
 				<h3 class="plan__header">Plan</h3>
 				<ol class="plan__list">
-					<li class="plan__element">Otwórz przeglądarkę</li>
-					<li class="plan__element">Wpisz cotenfrontend.pl</li>
-					<li class="plan__element">[enter]</li>
+					<li class="plan__item">Otwórz przeglądarkę</li>
+					<li class="plan__item">Wpisz cotenfrontend.pl</li>
+					<li class="plan__item">[enter]</li>
 				</ol>
 			</section>
 		</section>
