feat: Dodałem słowniczek

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<section class="about">
 			<h2 class="about__header">Kim jestem?</h2>
 			<p class="about__paragraph about__paragraph--js">
-				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User	Group).	Bywam
+				Hej! Na codzień pracuję jako informatyk. Jestem członkiem grupy .NET OLMUG (Olsztyn Microsoft User
+				Group). Bywam
 				też często na różnych konferencjach IT. Od 2013 roku jeżdżę regularnie na ITechDay. Od
 				czasu do czasu dodaję wpisy na blogu Kierznowski.pro <br>
 				<a class="about__link" href="#pamietniczek">Przejdź do pamiętniczka.</a>
@@ -89,7 +90,18 @@
 				</p>
 			</section>
 		</section>
-
+		<section class="glossary">
+			<h2 class="glossary__header">Słowniczek</h2>
+			<dl class="glossary__list">
+				<dt class="glossary__list-title">CSS</dt>
+				<dd class="glossary__list-description">Style - to co widzisz jak jest ładne albo brzydkie</dd>
+				<dt class="glossary__list-title">HTML</dt>
+				<dd class="glossary__list-description">treść + szkielet strony</dd>
+				<dt class="glossary__list-title">JavaScript</dt>
+				<dd class="glossary__list-description">ES6</dd>
+				<dd class="glossary__list-description">rzeczy, których teraz się uczę</dd>
+			</dl>
+		</section>
 	</main>
 	<footer>
 		<a href="#top" class="top">Na górę</a>
