feat: Dodałem prostą tabelę

--- a/index.html
+++ b/index.html
@@ -102,6 +102,30 @@
 				<dd class="glossary__list-description">rzeczy, których teraz się uczę</dd>
 			</dl>
 		</section>
+
+		<section class="data">
+			<h2>Dziennik ocen</h2>
+			<table>
+				<thead>
+					<th>Imię</th>
+					<th>Ocena</th>
+					<th>Data</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Radosław Kierznowski</td>
+						<td>5</td>
+						<td>27.07.2019</td>
+					</tr>
+					<tr>
+						<td>Uczeń Uczniowski</td>
+						<td>3</td>
+						<td>27.07.2019</td>
+					</tr>
+				</tbody>
+			</table>
+		</section>
+
 	</main>
 	<footer>
 		<a href="#top" class="top">Na górę</a>
