--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 		<section class="data">
 			<h2>Dziennik ocen</h2>
-			<table>
+			<table class="table">
 				<thead>
 					<th>Imię</th>
 					<th>Ocena</th>
