feat: Dodałem caption

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		<section class="data">
 			<h2>Dziennik ocen</h2>
 			<table class="table">
+				<caption>Oceny z pierwszego semestru z przedmiotu WTF</caption>
 				<thead>
 					<th>Imię</th>
 					<th>Ocena</th>
