--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<p class="diary__paragraph">
 					Wczoraj (niedziela) chciałem zrobić pracę domową z tygodnia II. Niestety ja i inni uczestnicy kursu
 					nie mogliśmy tego zrobić, bo na kilka godzin padł Vimeo. <br>
-					<a class="diary_link" href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy
+					<a class="diary__link" href="podstrona.html">Przejdź do artykułu o 1 podejściu do pracy
 						domowej.</a>
 				</p>
 			</section>
