Tabela cała opisana BEMem

--- a/index.html
+++ b/index.html
@@ -105,23 +105,23 @@
 
 		<section class="data">
 			<h2 class="data__header">Dziennik ocen</h2>
-			<table class="data__table">
-				<caption class="data__caption">Oceny z pierwszego semestru z przedmiotu WTF</caption>
-				<thead>
-					<th>Imię</th>
-					<th>Ocena</th>
-					<th>Data</th>
+			<table class="Ptable">
+				<caption class="table__caption">Oceny z pierwszego semestru z przedmiotu WTF</caption>
+				<thead class="table__head">
+					<th class="table__header">Imię</th>
+					<th class="table__header">Ocena</th>
+					<th class="table__header">Data</th>
 				</thead>
-				<tbody>
-					<tr>
-						<td>Radosław Kierznowski</td>
-						<td>5</td>
-						<td>27.07.2019</td>
+				<tbody class="table__body">
+					<tr class="table__row">
+						<td class="table__cell">Radosław Kierznowski</td>
+						<td class="table__cell">5</td>
+						<td class="table__cell">27.07.2019</td>
 					</tr>
-					<tr>
-						<td>Uczeń Uczniowski</td>
-						<td>3</td>
-						<td>27.07.2019</td>
+					<tr class="table__row">
+						<td class="table__cell">Uczeń Uczniowski</td>
+						<td class="table__cell">3</td>
+						<td class="table__cell">27.07.2019</td>
 					</tr>
 				</tbody>
 			</table>
