Naprawa literówki w klasie

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 		<section class="data">
 			<h2 class="data__header">Dziennik ocen</h2>
-			<table class="Ptable">
+			<table class="table">
 				<caption class="table__caption">Oceny z pierwszego semestru z przedmiotu WTF</caption>
 				<thead class="table__head">
 					<th class="table__header">Imię</th>
